feat: :sparkles: Add support to dice oracles

--- a/lang/en.json
+++ b/lang/en.json
@@ -294,6 +294,7 @@
   "SDM.ChatContextHalfHealing": "Apply Half Healing",
   "SDM.ChatContextHealing": "Apply Healing",
   "SDM.ChatContextNoTokensSelected": "Cannot Apply: No token selected!",
+  "SDM.ClampedFrom": "clamped from",
   "SDM.ColorAqua": "Aqua",
   "SDM.ColorBlack": "Black",
   "SDM.ColorBlue": "Blue",
@@ -324,6 +325,7 @@
   "SDM.ColorWhite": "White",
   "SDM.ColorYellow": "Yellow",
   "SDM.CombatantsExcluded": "Excluded from combat: {names}",
+  "SDM.ConsultOracle": "Consult Oracle",
   "SDM.ConsumeSupply": "Consume Supplies",
   "SDM.ConsumeSupplyHint": "Weekly Required Supplies",
   "SDM.Corruption": "Corruption",
@@ -375,6 +377,7 @@
   "SDM.DeletePower": "Delete Power",
   "SDM.DepletedResources": "Last ammo, one remains",
   "SDM.DiceDiscarded": "discarded",
+  "SDM.DiceOracles": "Dice Oracles",
   "SDM.Die": "Die",
   "SDM.DistributeXP": "Distribute XP",
   "SDM.DOCUMENT.Create": "Create {type}",
@@ -580,12 +583,12 @@
   "SDM.GearStartingKit": "Starting Kit",
   "SDM.GearStartingKitRemainingItems": "Remaining Items",
   "SDM.generic-synthesized-creature": "Generic Synthesized Creature",
-  "SDM.GMDiceOracles": "Dice Oracles",
   "SDM.GMGenerateRandomNPC": "Generate Random NPC",
   "SDM.GMGiveCash": "Give/Take Cash",
   "SDM.GMGiveExperience": "Give Experience",
   "SDM.GMGiveHeroDice": "Give Hero Dice",
   "SDM.GMGroupInitiative": "Group Initiative",
+  "SDM.Grade": "Grade",
   "SDM.GroupInitiativeErrorNoTokens": "Select all tokens that will be part of the encounter. No need to create the encounter beforehand.",
   "SDM.HallmarkItem": "Hallmark",
   "SDM.Healing": "Healing",
@@ -772,6 +775,172 @@
   "SDM.NpcXp": "XP",
   "SDM.OneHanded": "One-Handed",
   "SDM.OptionalField": "{field} (optional)",
+  "SDM.Oracle.bell-2d10.10.description": "Barely negative outcome",
+  "SDM.Oracle.bell-2d10.10.outcome": "No",
+  "SDM.Oracle.bell-2d10.11.description": "Barely positive outcome",
+  "SDM.Oracle.bell-2d10.11.outcome": "Yes",
+  "SDM.Oracle.bell-2d10.12.description": "Slightly positive outcome",
+  "SDM.Oracle.bell-2d10.12.outcome": "Yes",
+  "SDM.Oracle.bell-2d10.13.description": "Positive but with minor drawbacks",
+  "SDM.Oracle.bell-2d10.13.outcome": "Yes",
+  "SDM.Oracle.bell-2d10.14.description": "Mostly positive outcome",
+  "SDM.Oracle.bell-2d10.14.outcome": "Yes",
+  "SDM.Oracle.bell-2d10.15.description": "Positive outcome with benefits",
+  "SDM.Oracle.bell-2d10.15.outcome": "Yes",
+  "SDM.Oracle.bell-2d10.16.description": "Clear positive outcome",
+  "SDM.Oracle.bell-2d10.16.outcome": "Yes",
+  "SDM.Oracle.bell-2d10.17.description": "Strong positive outcome",
+  "SDM.Oracle.bell-2d10.17.outcome": "Yes",
+  "SDM.Oracle.bell-2d10.18.description": "Remarkably positive with additional benefits",
+  "SDM.Oracle.bell-2d10.18.outcome": "Exceptional Yes",
+  "SDM.Oracle.bell-2d10.19.description": "Extremely positive outcome",
+  "SDM.Oracle.bell-2d10.19.outcome": "Exceptional Yes",
+  "SDM.Oracle.bell-2d10.2.description": "Not only no, but circumstances turn against you",
+  "SDM.Oracle.bell-2d10.2.outcome": "Exceptional No",
+  "SDM.Oracle.bell-2d10.20.description": "Best possible outcome with unexpected bonuses",
+  "SDM.Oracle.bell-2d10.20.outcome": "Exceptional Yes",
+  "SDM.Oracle.bell-2d10.3.description": "A definitive and negative outcome",
+  "SDM.Oracle.bell-2d10.3.outcome": "Exceptional No",
+  "SDM.Oracle.bell-2d10.4.description": "Strong negative with lasting consequences",
+  "SDM.Oracle.bell-2d10.4.outcome": "Exceptional No",
+  "SDM.Oracle.bell-2d10.5.description": "Clear negative outcome",
+  "SDM.Oracle.bell-2d10.5.outcome": "No",
+  "SDM.Oracle.bell-2d10.6.description": "Negative outcome with minor complications",
+  "SDM.Oracle.bell-2d10.6.outcome": "No",
+  "SDM.Oracle.bell-2d10.7.description": "Mostly negative with some nuance",
+  "SDM.Oracle.bell-2d10.7.outcome": "No",
+  "SDM.Oracle.bell-2d10.8.description": "Negative but not disastrous",
+  "SDM.Oracle.bell-2d10.8.outcome": "No",
+  "SDM.Oracle.bell-2d10.9.description": "Slightly negative outcome",
+  "SDM.Oracle.bell-2d10.9.outcome": "No",
+  "SDM.Oracle.bell-2d6.10.description": "8.3% - Somewhat unexpected",
+  "SDM.Oracle.bell-2d6.10.grade": "Yes, somewhat unexpected",
+  "SDM.Oracle.bell-2d6.10.outcome": "Uncommon outcome",
+  "SDM.Oracle.bell-2d6.11.description": "5.6% - Unusual development",
+  "SDM.Oracle.bell-2d6.11.grade": "Yes, unusual",
+  "SDM.Oracle.bell-2d6.11.outcome": "Rare outcome",
+  "SDM.Oracle.bell-2d6.12.description": "2.8% - Exceptional circumstance",
+  "SDM.Oracle.bell-2d6.12.grade": "Exceptional Yes",
+  "SDM.Oracle.bell-2d6.12.outcome": "Very rare outcome",
+  "SDM.Oracle.bell-2d6.2.description": "2.8% - Exceptional circumstance",
+  "SDM.Oracle.bell-2d6.2.grade": "Exceptional No",
+  "SDM.Oracle.bell-2d6.2.outcome": "Very rare outcome",
+  "SDM.Oracle.bell-2d6.3.description": "5.6% - Unusual development",
+  "SDM.Oracle.bell-2d6.3.grade": "No, unusual",
+  "SDM.Oracle.bell-2d6.3.outcome": "Rare outcome",
+  "SDM.Oracle.bell-2d6.4.description": "8.3% - Somewhat unexpected",
+  "SDM.Oracle.bell-2d6.4.grade": "No, somewhat unexpected",
+  "SDM.Oracle.bell-2d6.4.outcome": "Uncommon outcome",
+  "SDM.Oracle.bell-2d6.5.description": "11.1% - Slightly unusual",
+  "SDM.Oracle.bell-2d6.5.grade": "No, slightly unusual",
+  "SDM.Oracle.bell-2d6.5.outcome": "Somewhat common",
+  "SDM.Oracle.bell-2d6.6.description": "13.9% - Likely result",
+  "SDM.Oracle.bell-2d6.6.grade": "Yes, likely",
+  "SDM.Oracle.bell-2d6.6.outcome": "Common outcome",
+  "SDM.Oracle.bell-2d6.7.description": "16.7% - Very likely result",
+  "SDM.Oracle.bell-2d6.7.grade": "Yes, very likely",
+  "SDM.Oracle.bell-2d6.7.outcome": "Most common",
+  "SDM.Oracle.bell-2d6.8.description": "13.9% - Likely result",
+  "SDM.Oracle.bell-2d6.8.grade": "Yes, likely",
+  "SDM.Oracle.bell-2d6.8.outcome": "Common outcome",
+  "SDM.Oracle.bell-2d6.9.description": "11.1% - Slightly unusual",
+  "SDM.Oracle.bell-2d6.9.grade": "Yes, slightly unusual",
+  "SDM.Oracle.bell-2d6.9.outcome": "Somewhat common",
+  "SDM.Oracle.d10-oracle.1.description": "10% - Standard outcome",
+  "SDM.Oracle.d10-oracle.1.grade": "Yes, standard",
+  "SDM.Oracle.d10-oracle.1.outcome": "Common",
+  "SDM.Oracle.d10-oracle.10.description": "10% - Exceptional result",
+  "SDM.Oracle.d10-oracle.10.grade": "Exceptional No",
+  "SDM.Oracle.d10-oracle.10.outcome": "Rare",
+  "SDM.Oracle.d10-oracle.2.description": "10% - Standard outcome",
+  "SDM.Oracle.d10-oracle.2.grade": "Yes, standard",
+  "SDM.Oracle.d10-oracle.2.outcome": "Common",
+  "SDM.Oracle.d10-oracle.3.description": "10% - Standard outcome",
+  "SDM.Oracle.d10-oracle.3.grade": "No, standard",
+  "SDM.Oracle.d10-oracle.3.outcome": "Common",
+  "SDM.Oracle.d10-oracle.4.description": "10% - Standard outcome",
+  "SDM.Oracle.d10-oracle.4.grade": "No, standard",
+  "SDM.Oracle.d10-oracle.4.outcome": "Common",
+  "SDM.Oracle.d10-oracle.5.description": "10% - Standard outcome",
+  "SDM.Oracle.d10-oracle.5.grade": "Mixed outcome",
+  "SDM.Oracle.d10-oracle.5.outcome": "Common",
+  "SDM.Oracle.d10-oracle.6.description": "10% - Unusual twist",
+  "SDM.Oracle.d10-oracle.6.grade": "Yes, but unusual",
+  "SDM.Oracle.d10-oracle.6.outcome": "Uncommon",
+  "SDM.Oracle.d10-oracle.7.description": "10% - Unusual twist",
+  "SDM.Oracle.d10-oracle.7.grade": "No, but unusual",
+  "SDM.Oracle.d10-oracle.7.outcome": "Uncommon",
+  "SDM.Oracle.d10-oracle.8.description": "10% - Unusual twist",
+  "SDM.Oracle.d10-oracle.8.grade": "Mixed, unusual",
+  "SDM.Oracle.d10-oracle.8.outcome": "Uncommon",
+  "SDM.Oracle.d10-oracle.9.description": "10% - Exceptional result",
+  "SDM.Oracle.d10-oracle.9.grade": "Exceptional Yes",
+  "SDM.Oracle.d10-oracle.9.outcome": "Rare",
+  "SDM.Oracle.quick-d6.1.description": "50% odds - The usual or most likely result",
+  "SDM.Oracle.quick-d6.1.grade": "Yes, expected",
+  "SDM.Oracle.quick-d6.1.outcome": "Common or expected outcome",
+  "SDM.Oracle.quick-d6.2.description": "50% odds - The usual or most likely result",
+  "SDM.Oracle.quick-d6.2.grade": "Yes, expected",
+  "SDM.Oracle.quick-d6.2.outcome": "Common or expected outcome",
+  "SDM.Oracle.quick-d6.3.description": "50% odds - The usual or most likely result",
+  "SDM.Oracle.quick-d6.3.grade": "No, expected",
+  "SDM.Oracle.quick-d6.3.outcome": "Common or expected outcome",
+  "SDM.Oracle.quick-d6.4.description": "33% odds - Something unexpected but plausible",
+  "SDM.Oracle.quick-d6.4.grade": "Yes, but unusual",
+  "SDM.Oracle.quick-d6.4.outcome": "Uncommon or unusual outcome",
+  "SDM.Oracle.quick-d6.5.description": "33% odds - Something unexpected but plausible",
+  "SDM.Oracle.quick-d6.5.grade": "No, but unusual",
+  "SDM.Oracle.quick-d6.5.outcome": "Uncommon or unusual outcome",
+  "SDM.Oracle.quick-d6.6.description": "17% odds - A remarkable or unlikely result",
+  "SDM.Oracle.quick-d6.6.grade": "Exceptional Yes",
+  "SDM.Oracle.quick-d6.6.outcome": "Rare or exceptional outcome",
+  "SDM.Oracle.skilled-d20.1.description": "Not only no, but things get worse",
+  "SDM.Oracle.skilled-d20.1.outcome": "Nay and woe!",
+  "SDM.Oracle.skilled-d20.10.description": "Yes, but with significant cost",
+  "SDM.Oracle.skilled-d20.10.outcome": "Perhaps, for a price",
+  "SDM.Oracle.skilled-d20.11.description": "Yes, but with significant cost",
+  "SDM.Oracle.skilled-d20.11.outcome": "Perhaps, for a price",
+  "SDM.Oracle.skilled-d20.12.description": "Yes, but with significant cost",
+  "SDM.Oracle.skilled-d20.12.outcome": "Perhaps, for a price",
+  "SDM.Oracle.skilled-d20.13.description": "Yes, but with significant cost",
+  "SDM.Oracle.skilled-d20.13.outcome": "Perhaps, for a price",
+  "SDM.Oracle.skilled-d20.14.description": "Yes, but with minor conditions",
+  "SDM.Oracle.skilled-d20.14.outcome": "Yea",
+  "SDM.Oracle.skilled-d20.15.description": "Yes, but with minor conditions",
+  "SDM.Oracle.skilled-d20.15.outcome": "Yea",
+  "SDM.Oracle.skilled-d20.16.description": "Yes, but with minor conditions",
+  "SDM.Oracle.skilled-d20.16.outcome": "Yea",
+  "SDM.Oracle.skilled-d20.17.description": "Yes, but with minor conditions",
+  "SDM.Oracle.skilled-d20.17.outcome": "Yea",
+  "SDM.Oracle.skilled-d20.18.description": "Yes, but with minor conditions",
+  "SDM.Oracle.skilled-d20.18.outcome": "Yea",
+  "SDM.Oracle.skilled-d20.19.description": "Yes, but with minor conditions",
+  "SDM.Oracle.skilled-d20.19.outcome": "Yea",
+  "SDM.Oracle.skilled-d20.2.description": "Not only no, but things get worse",
+  "SDM.Oracle.skilled-d20.2.outcome": "Nay and woe!",
+  "SDM.Oracle.skilled-d20.20.description": "Yes, and with unexpected benefits",
+  "SDM.Oracle.skilled-d20.20.outcome": "Yea and more!",
+  "SDM.Oracle.skilled-d20.3.description": "Not only no, but things get worse",
+  "SDM.Oracle.skilled-d20.3.outcome": "Nay and woe!",
+  "SDM.Oracle.skilled-d20.4.description": "No, and with complications",
+  "SDM.Oracle.skilled-d20.4.outcome": "Nay",
+  "SDM.Oracle.skilled-d20.5.description": "No, and with complications",
+  "SDM.Oracle.skilled-d20.5.outcome": "Nay",
+  "SDM.Oracle.skilled-d20.6.description": "No, and with complications",
+  "SDM.Oracle.skilled-d20.6.outcome": "Nay",
+  "SDM.Oracle.skilled-d20.7.description": "No, and with complications",
+  "SDM.Oracle.skilled-d20.7.outcome": "Nay",
+  "SDM.Oracle.skilled-d20.8.description": "Yes, but with significant cost",
+  "SDM.Oracle.skilled-d20.8.outcome": "Perhaps, for a price",
+  "SDM.Oracle.skilled-d20.9.description": "Yes, but with significant cost",
+  "SDM.Oracle.skilled-d20.9.outcome": "Perhaps, for a price",
+  "SDM.OracleLabel.bell-2d10": "2d10 Fate",
+  "SDM.OracleLabel.bell-2d6": "Bell Curve 2d6",
+  "SDM.OracleLabel.d10-oracle": "d10 Oracle",
+  "SDM.OracleLabel.quick-d6": "Quick d6",
+  "SDM.OracleLabel.skilled-d20": "Skilled d20",
+  "SDM.OracleResult": "Oracle Response",
+  "SDM.OracleType": "Oracle Type",
   "SDM.OriginalKeeps": "Original Stack Keeps",
   "SDM.OriginalRoll": "Original roll",
   "SDM.Power": "Power",
@@ -798,6 +967,7 @@
   "SDM.PullModeCarting": "carting",
   "SDM.PullModeDragging": "dragging",
   "SDM.PullModeFlying": "flying",
+  "SDM.Question": "Question",
   "SDM.RangeClose": "close",
   "SDM.RangeLong": "long",
   "SDM.RangeMedium": "medium",
