--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -294,6 +294,7 @@
   "SDM.ChatContextHalfHealing": "Aplicar Metade da Cura",
   "SDM.ChatContextHealing": "Aplicar Cura",
   "SDM.ChatContextNoTokensSelected": "Não pode Aplicar: Nenhum token selecionado!",
+  "SDM.ClampedFrom": "limitado de",
   "SDM.ColorAqua": "Água",
   "SDM.ColorBlack": "Preto",
   "SDM.ColorBlue": "Azul",
@@ -324,6 +325,7 @@
   "SDM.ColorWhite": "Branco",
   "SDM.ColorYellow": "Amarelo",
   "SDM.CombatantsExcluded": "Excluídos do combate: {names}",
+  "SDM.ConsultOracle": "Consultar Oráculo",
   "SDM.ConsumeSupply": "Consumir Suprimentos",
   "SDM.ConsumeSupplyHint": "Suprimentos Semanais Requeridos",
   "SDM.Corruption": "Corrupção",
@@ -375,6 +377,7 @@
   "SDM.DeletePower": "Deletar Poder",
   "SDM.DepletedResources": "Última bala, resta uma",
   "SDM.DiceDiscarded": "descartado",
+  "SDM.DiceOracles": "Oráculos dos Dados",
   "SDM.Die": "Dado",
   "SDM.DistributeXP": "Distribuir EXP",
   "SDM.DOCUMENT.Create": "Criar {type}",
@@ -580,12 +583,12 @@
   "SDM.GearStartingKit": "Kit Inicial",
   "SDM.GearStartingKitRemainingItems": "Itens Restantes",
   "SDM.generic-synthesized-creature": "Criatura Sintetizada Genérica",
-  "SDM.GMDiceOracles": "Oráculos dos Dados",
   "SDM.GMGenerateRandomNPC": "Gerar NPC Aleatório",
   "SDM.GMGiveCash": "Distribuir/Cobrar Dinheiro",
   "SDM.GMGiveExperience": "Distribuir Experiência",
   "SDM.GMGiveHeroDice": "Distribuir Dado Heróico",
   "SDM.GMGroupInitiative": "Iniciativa em Grupo",
+  "SDM.Grade": "Grau",
   "SDM.GroupInitiativeErrorNoTokens": "Selecione todos os tokens que farão parte do encontro. Não há necessidade de criar o encontro previamente.",
   "SDM.HallmarkItem": "Emblemático",
   "SDM.Healing": "Cura",
@@ -772,6 +775,172 @@
   "SDM.NpcXp": "EXP",
   "SDM.OneHanded": "Uma mão",
   "SDM.OptionalField": "{field} (opcional)",
+  "SDM.Oracle.bell-2d10.10.description": "Resultado quase negativo",
+  "SDM.Oracle.bell-2d10.10.outcome": "Não",
+  "SDM.Oracle.bell-2d10.11.description": "Resultado quase positivo",
+  "SDM.Oracle.bell-2d10.11.outcome": "Sim",
+  "SDM.Oracle.bell-2d10.12.description": "Resultado levemente positivo",
+  "SDM.Oracle.bell-2d10.12.outcome": "Sim",
+  "SDM.Oracle.bell-2d10.13.description": "Positivo mas com pequenos inconvenientes",
+  "SDM.Oracle.bell-2d10.13.outcome": "Sim",
+  "SDM.Oracle.bell-2d10.14.description": "Resultado majoritariamente positivo",
+  "SDM.Oracle.bell-2d10.14.outcome": "Sim",
+  "SDM.Oracle.bell-2d10.15.description": "Resultado positivo com benefícios",
+  "SDM.Oracle.bell-2d10.15.outcome": "Sim",
+  "SDM.Oracle.bell-2d10.16.description": "Resultado positivo claro",
+  "SDM.Oracle.bell-2d10.16.outcome": "Sim",
+  "SDM.Oracle.bell-2d10.17.description": "Resultado positivo forte",
+  "SDM.Oracle.bell-2d10.17.outcome": "Sim",
+  "SDM.Oracle.bell-2d10.18.description": "Remarkavelmente positivo com benefícios adicionais",
+  "SDM.Oracle.bell-2d10.18.outcome": "Sim Excepcional",
+  "SDM.Oracle.bell-2d10.19.description": "Resultado extremamente positivo",
+  "SDM.Oracle.bell-2d10.19.outcome": "Sim Excepcional",
+  "SDM.Oracle.bell-2d10.2.description": "Não apenas não, mas as circunstâncias se voltam contra você",
+  "SDM.Oracle.bell-2d10.2.outcome": "Não Excepcional",
+  "SDM.Oracle.bell-2d10.20.description": "Melhor resultado possível com bônus inesperados",
+  "SDM.Oracle.bell-2d10.20.outcome": "Sim Excepcional",
+  "SDM.Oracle.bell-2d10.3.description": "Um resultado definitivo e negativo",
+  "SDM.Oracle.bell-2d10.3.outcome": "Não Excepcional",
+  "SDM.Oracle.bell-2d10.4.description": "Negativo forte com consequências duradouras",
+  "SDM.Oracle.bell-2d10.4.outcome": "Não Excepcional",
+  "SDM.Oracle.bell-2d10.5.description": "Resultado negativo claro",
+  "SDM.Oracle.bell-2d10.5.outcome": "Não",
+  "SDM.Oracle.bell-2d10.6.description": "Resultado negativo com pequenas complicações",
+  "SDM.Oracle.bell-2d10.6.outcome": "Não",
+  "SDM.Oracle.bell-2d10.7.description": "Majoritariamente negativo com alguma nuance",
+  "SDM.Oracle.bell-2d10.7.outcome": "Não",
+  "SDM.Oracle.bell-2d10.8.description": "Negativo mas não desastroso",
+  "SDM.Oracle.bell-2d10.8.outcome": "Não",
+  "SDM.Oracle.bell-2d10.9.description": "Resultado levemente negativo",
+  "SDM.Oracle.bell-2d10.9.outcome": "Não",
+  "SDM.Oracle.bell-2d6.10.description": "8.3% - Algo um tanto inesperado",
+  "SDM.Oracle.bell-2d6.10.grade": "Sim, um tanto inesperado",
+  "SDM.Oracle.bell-2d6.10.outcome": "Resultado incomum",
+  "SDM.Oracle.bell-2d6.11.description": "5.6% - Desenvolvimento incomum",
+  "SDM.Oracle.bell-2d6.11.grade": "Sim, incomum",
+  "SDM.Oracle.bell-2d6.11.outcome": "Resultado raro",
+  "SDM.Oracle.bell-2d6.12.description": "2.8% - Circunstância excepcional",
+  "SDM.Oracle.bell-2d6.12.grade": "Sim Excepcional",
+  "SDM.Oracle.bell-2d6.12.outcome": "Resultado muito raro",
+  "SDM.Oracle.bell-2d6.2.description": "2.8% - Circunstância excepcional",
+  "SDM.Oracle.bell-2d6.2.grade": "Não Excepcional",
+  "SDM.Oracle.bell-2d6.2.outcome": "Resultado muito raro",
+  "SDM.Oracle.bell-2d6.3.description": "5.6% - Desenvolvimento incomum",
+  "SDM.Oracle.bell-2d6.3.grade": "Não, incomum",
+  "SDM.Oracle.bell-2d6.3.outcome": "Resultado raro",
+  "SDM.Oracle.bell-2d6.4.description": "8.3% - Algo um tanto inesperado",
+  "SDM.Oracle.bell-2d6.4.grade": "Não, um tanto inesperado",
+  "SDM.Oracle.bell-2d6.4.outcome": "Resultado incomum",
+  "SDM.Oracle.bell-2d6.5.description": "11.1% - Ligeiramente incomum",
+  "SDM.Oracle.bell-2d6.5.grade": "Não, ligeiramente incomum",
+  "SDM.Oracle.bell-2d6.5.outcome": "Um tanto comum",
+  "SDM.Oracle.bell-2d6.6.description": "13.9% - Resultado provável",
+  "SDM.Oracle.bell-2d6.6.grade": "Sim, provável",
+  "SDM.Oracle.bell-2d6.6.outcome": "Resultado comum",
+  "SDM.Oracle.bell-2d6.7.description": "16.7% - Resultado muito provável",
+  "SDM.Oracle.bell-2d6.7.grade": "Sim, muito provável",
+  "SDM.Oracle.bell-2d6.7.outcome": "Mais comum",
+  "SDM.Oracle.bell-2d6.8.description": "13.9% - Resultado provável",
+  "SDM.Oracle.bell-2d6.8.grade": "Sim, provável",
+  "SDM.Oracle.bell-2d6.8.outcome": "Resultado comum",
+  "SDM.Oracle.bell-2d6.9.description": "11.1% - Ligeiramente incomum",
+  "SDM.Oracle.bell-2d6.9.grade": "Sim, ligeiramente incomum",
+  "SDM.Oracle.bell-2d6.9.outcome": "Um tanto comum",
+  "SDM.Oracle.d10-oracle.1.description": "10% - Resultado padrão",
+  "SDM.Oracle.d10-oracle.1.grade": "Sim, padrão",
+  "SDM.Oracle.d10-oracle.1.outcome": "Comum",
+  "SDM.Oracle.d10-oracle.10.description": "10% - Resultado excepcional",
+  "SDM.Oracle.d10-oracle.10.grade": "Não Excepcional",
+  "SDM.Oracle.d10-oracle.10.outcome": "Raro",
+  "SDM.Oracle.d10-oracle.2.description": "10% - Resultado padrão",
+  "SDM.Oracle.d10-oracle.2.grade": "Sim, padrão",
+  "SDM.Oracle.d10-oracle.2.outcome": "Comum",
+  "SDM.Oracle.d10-oracle.3.description": "10% - Resultado padrão",
+  "SDM.Oracle.d10-oracle.3.grade": "Não, padrão",
+  "SDM.Oracle.d10-oracle.3.outcome": "Comum",
+  "SDM.Oracle.d10-oracle.4.description": "10% - Resultado padrão",
+  "SDM.Oracle.d10-oracle.4.grade": "Não, padrão",
+  "SDM.Oracle.d10-oracle.4.outcome": "Comum",
+  "SDM.Oracle.d10-oracle.5.description": "10% - Resultado padrão",
+  "SDM.Oracle.d10-oracle.5.grade": "Resultado misto",
+  "SDM.Oracle.d10-oracle.5.outcome": "Comum",
+  "SDM.Oracle.d10-oracle.6.description": "10% - Reviravolta incomum",
+  "SDM.Oracle.d10-oracle.6.grade": "Sim, mas incomum",
+  "SDM.Oracle.d10-oracle.6.outcome": "Incomum",
+  "SDM.Oracle.d10-oracle.7.description": "10% - Reviravolta incomum",
+  "SDM.Oracle.d10-oracle.7.grade": "Não, mas incomum",
+  "SDM.Oracle.d10-oracle.7.outcome": "Incomum",
+  "SDM.Oracle.d10-oracle.8.description": "10% - Reviravolta incomum",
+  "SDM.Oracle.d10-oracle.8.grade": "Misto, incomum",
+  "SDM.Oracle.d10-oracle.8.outcome": "Incomum",
+  "SDM.Oracle.d10-oracle.9.description": "10% - Resultado excepcional",
+  "SDM.Oracle.d10-oracle.9.grade": "Sim Excepcional",
+  "SDM.Oracle.d10-oracle.9.outcome": "Raro",
+  "SDM.Oracle.quick-d6.1.description": "50% de chance - O resultado usual ou mais provável",
+  "SDM.Oracle.quick-d6.1.grade": "Sim, esperado",
+  "SDM.Oracle.quick-d6.1.outcome": "Resultado comum ou esperado",
+  "SDM.Oracle.quick-d6.2.description": "50% de chance - O resultado usual ou mais provável",
+  "SDM.Oracle.quick-d6.2.grade": "Sim, esperado",
+  "SDM.Oracle.quick-d6.2.outcome": "Resultado comum ou esperado",
+  "SDM.Oracle.quick-d6.3.description": "50% de chance - O resultado usual ou mais provável",
+  "SDM.Oracle.quick-d6.3.grade": "Não, esperado",
+  "SDM.Oracle.quick-d6.3.outcome": "Resultado comum ou esperado",
+  "SDM.Oracle.quick-d6.4.description": "33% de chance - Algo inesperado mas plausível",
+  "SDM.Oracle.quick-d6.4.grade": "Sim, mas incomum",
+  "SDM.Oracle.quick-d6.4.outcome": "Resultado incomum ou inesperado",
+  "SDM.Oracle.quick-d6.5.description": "33% de chance - Algo inesperado mas plausível",
+  "SDM.Oracle.quick-d6.5.grade": "Não, mas incomum",
+  "SDM.Oracle.quick-d6.5.outcome": "Resultado incomum ou inesperado",
+  "SDM.Oracle.quick-d6.6.description": "17% de chance - Um resultado notável ou improvável",
+  "SDM.Oracle.quick-d6.6.grade": "Sim Excepcional",
+  "SDM.Oracle.quick-d6.6.outcome": "Resultado raro ou excepcional",
+  "SDM.Oracle.skilled-d20.1.description": "Não apenas não, mas as coisas pioram",
+  "SDM.Oracle.skilled-d20.1.outcome": "Não e ai!",
+  "SDM.Oracle.skilled-d20.10.description": "Sim, mas com custo significativo",
+  "SDM.Oracle.skilled-d20.10.outcome": "Talvez, por um preço",
+  "SDM.Oracle.skilled-d20.11.description": "Sim, mas com custo significativo",
+  "SDM.Oracle.skilled-d20.11.outcome": "Talvez, por um preço",
+  "SDM.Oracle.skilled-d20.12.description": "Sim, mas com custo significativo",
+  "SDM.Oracle.skilled-d20.12.outcome": "Talvez, por um preço",
+  "SDM.Oracle.skilled-d20.13.description": "Sim, mas com custo significativo",
+  "SDM.Oracle.skilled-d20.13.outcome": "Talvez, por um preço",
+  "SDM.Oracle.skilled-d20.14.description": "Sim, mas com condições menores",
+  "SDM.Oracle.skilled-d20.14.outcome": "Sim",
+  "SDM.Oracle.skilled-d20.15.description": "Sim, mas com condições menores",
+  "SDM.Oracle.skilled-d20.15.outcome": "Sim",
+  "SDM.Oracle.skilled-d20.16.description": "Sim, mas com condições menores",
+  "SDM.Oracle.skilled-d20.16.outcome": "Sim",
+  "SDM.Oracle.skilled-d20.17.description": "Sim, mas com condições menores",
+  "SDM.Oracle.skilled-d20.17.outcome": "Sim",
+  "SDM.Oracle.skilled-d20.18.description": "Sim, mas com condições menores",
+  "SDM.Oracle.skilled-d20.18.outcome": "Sim",
+  "SDM.Oracle.skilled-d20.19.description": "Sim, mas com condições menores",
+  "SDM.Oracle.skilled-d20.19.outcome": "Sim",
+  "SDM.Oracle.skilled-d20.2.description": "Não apenas não, mas as coisas pioram",
+  "SDM.Oracle.skilled-d20.2.outcome": "Não e ai!",
+  "SDM.Oracle.skilled-d20.20.description": "Sim, e com benefícios inesperados",
+  "SDM.Oracle.skilled-d20.20.outcome": "Sim e mais!",
+  "SDM.Oracle.skilled-d20.3.description": "Não apenas não, mas as coisas pioram",
+  "SDM.Oracle.skilled-d20.3.outcome": "Não e ai!",
+  "SDM.Oracle.skilled-d20.4.description": "Não, e com complicações",
+  "SDM.Oracle.skilled-d20.4.outcome": "Não",
+  "SDM.Oracle.skilled-d20.5.description": "Não, e com complicações",
+  "SDM.Oracle.skilled-d20.5.outcome": "Não",
+  "SDM.Oracle.skilled-d20.6.description": "Não, e com complicações",
+  "SDM.Oracle.skilled-d20.6.outcome": "Não",
+  "SDM.Oracle.skilled-d20.7.description": "Não, e com complicações",
+  "SDM.Oracle.skilled-d20.7.outcome": "Não",
+  "SDM.Oracle.skilled-d20.8.description": "Sim, mas com custo significativo",
+  "SDM.Oracle.skilled-d20.8.outcome": "Talvez, por um preço",
+  "SDM.Oracle.skilled-d20.9.description": "Sim, mas com custo significativo",
+  "SDM.Oracle.skilled-d20.9.outcome": "Talvez, por um preço",
+  "SDM.OracleLabel.bell-2d10": "2d10 do Destino",
+  "SDM.OracleLabel.bell-2d6": "2d6 Curva de Sino",
+  "SDM.OracleLabel.d10-oracle": "Oráculo d10",
+  "SDM.OracleLabel.quick-d6": "d6 Rápido ",
+  "SDM.OracleLabel.skilled-d20": "d20 Habilidoso",
+  "SDM.OracleResult": "Resposta do Oráculo",
+  "SDM.OracleType": "Tipo de Oráculo",
   "SDM.OriginalKeeps": "Parte Original Mantêm",
   "SDM.OriginalRoll": "Rolagem original",
   "SDM.Power": "Poder",
@@ -798,6 +967,7 @@
   "SDM.PullModeCarting": "transporte",
   "SDM.PullModeDragging": "arraste",
   "SDM.PullModeFlying": "voo",
+  "SDM.Question": "Pergunta",
   "SDM.RangeClose": "perto",
   "SDM.RangeLong": "longo",
   "SDM.RangeMedium": "médio",
