feat: :sparkles: Add distinct color config for hero, blood, tourist and oracle 3D dice

--- a/lang/en.json
+++ b/lang/en.json
@@ -378,6 +378,15 @@
   "SDM.DepletedResources": "Last ammo, one remains",
   "SDM.DiceDiscarded": "discarded",
   "SDM.DiceOracles": "Dice Oracles",
+  "SDM.DiceTheme.Chromatype": "Chromatype Dice theme",
+  "SDM.DiceTheme.Cool": "Cool Dice theme",
+  "SDM.DiceTheme.Dark": "Dark Dice theme",
+  "SDM.DiceTheme.Light": "Light Dice theme",
+  "SDM.DiceTheme.Luxury": "Luxury Dice theme",
+  "SDM.DiceTheme.Neon": "Neon Dice theme",
+  "SDM.DiceTheme.Rainbowlands": "Rainbowlands Dice theme",
+  "SDM.DiceTheme.Romantic": "Romantic Dice theme",
+  "SDM.DiceTheme.Warm": "Warm Dice theme",
   "SDM.Die": "Die",
   "SDM.DistributeXP": "Distribute XP",
   "SDM.DOCUMENT.Create": "Create {type}",
@@ -594,6 +603,7 @@
   "SDM.Healing": "Healing",
   "SDM.HealingHouseRule": "Healing House Rule",
   "SDM.HeroDice": "hero die",
+  "SDM.HeroDiceDefaultStyle": "Hero Dice default style",
   "SDM.HeroDiceHealingTip": "<b>Left-click</b>: roll Hero Dice for healing<br><b>Right-click</b>: add Hero Dice to a shared Bonus Pool",
   "SDM.HeroDiceMode": "Hero Dice Mode",
   "SDM.HeroDiceModeDecrease": "Decrease (suppress roll result)",
@@ -934,6 +944,7 @@
   "SDM.Oracle.skilled-d20.8.outcome": "Perhaps, for a price",
   "SDM.Oracle.skilled-d20.9.description": "Yes, but with significant cost",
   "SDM.Oracle.skilled-d20.9.outcome": "Perhaps, for a price",
+  "SDM.OracleDiceDefaultStyle": "Oracle Dice default style",
   "SDM.OracleLabel.bell-2d10": "2d10 Fate",
   "SDM.OracleLabel.bell-2d6": "Bell Curve 2d6",
   "SDM.OracleLabel.d10-oracle": "d10 Oracle",
@@ -1049,8 +1060,10 @@
   "SDM.SettingsBaseSocialDefenseHint": "Base social defense value for characters",
   "SDM.SettingsBaseTraitSlots": "Base Trait Slots",
   "SDM.SettingsBaseTraitSlotsHint": "Base number of trait slots for a character",
+  "SDM.SettingsBloodDiceStyle": "Blood Dice color",
+  "SDM.SettingsBloodDiceStyleHint": "Configure 3d dice style used for blood dice",
   "SDM.SettingsChromatype": "Chromatype",
-  "SDM.SettingsChromatypeHint": "Pick your chromatype in the light of the polychrome UI! (change UI highlight color)<br>Check Dice So Nice: 3D Dice Settings for a \"SDM Chromatype Dice\" theme",
+  "SDM.SettingsChromatypeHint": "Pick your chromatype in the light of the polychrome UI! (change UI highlight color)<br>Check Dice So Nice: 3D Dice Settings for a \"SDM: Chromatype Dice\" theme",
   "SDM.SettingsCurrencyImg": "Currency image",
   "SDM.SettingsCurrencyImgHint": "Default image for new currency items created by the 'Give Cash' Referee Macro",
   "SDM.SettingsCurrencyName": "Currency name",
@@ -1073,6 +1086,8 @@
   "SDM.SettingsGroupPlayersToFriendlyTokensHint": "When enabled, players are grouped together with friendly tokens.",
   "SDM.SettingsHealingHouseRule": "Healing House Rule",
   "SDM.SettingsHealingHouseRuleHint": "Roll hero dice twice and keep the highest result",
+  "SDM.SettingsHeroDiceStyle": "Hero Dice color",
+  "SDM.SettingsHeroDiceStyleHint": "Configure 3d dice style used for hero dice",
   "SDM.SettingsInitiativeFormula": "Initiative Formula",
   "SDM.SettingsInitiativeFormulaHint": "Default initiative formula for characters",
   "SDM.SettingsInvalidChange": "Invalid {settings}, reverting to default value",
@@ -1082,6 +1097,8 @@
   "SDM.SettingsLuckySevenRuleHint": "The referee provides a benefit or bonus, when a natural 7 is rolled. Even if the roll is otherwise a failure.",
   "SDM.SettingsNPCInitiativeFormula": "NPC Initiative Formula",
   "SDM.SettingsNPCInitiativeFormulaHint": "Default initiative formula for NPCs",
+  "SDM.SettingsOracleDiceStyle": "Oracle Dice color",
+  "SDM.SettingsOracleDiceStyleHint": "Configure 3d dice style used for oracle dice",
   "SDM.SettingsRerollInitiativeEveryRound": "Reroll Group Initiatives Every Round",
   "SDM.SettingsRerollInitiativeEveryRoundHint": "When enabled, it will reroll group initiatives every new round.",
   "SDM.SettingsReverseShiftKey": "Reverse Shift Key",
@@ -1094,6 +1111,8 @@
   "SDM.SettingsShouldPlayLevelUpSoundFxHint": "Plays a sound effect when a character levels up",
   "SDM.SettingsSkillModifierStep": "Skill Rank Increment",
   "SDM.SettingsSkillModifierStepHint": "Changes the bonus amount given in a roll by each skill rank",
+  "SDM.SettingsTouristDiceStyle": "Tourist Dice color",
+  "SDM.SettingsTouristDiceStyleHint": "Configure 3d dice style used for tourist dice",
   "SDM.SettingsUseHardLimitRule": "Optional Hard Limit Rule",
   "SDM.SettingsUseHardLimitRuleHint": "Enables a hard limit on bonuses applied to d20 rolls",
   "SDM.SettingUpdated": "{key} updated to {value}.",
