--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -378,6 +378,15 @@
   "SDM.DepletedResources": "Última bala, resta uma",
   "SDM.DiceDiscarded": "descartado",
   "SDM.DiceOracles": "Oráculos dos Dados",
+  "SDM.DiceTheme.Chromatype": "Tema de Dados de Cromatipo",
+  "SDM.DiceTheme.Cool": "Tema de Dados Frios",
+  "SDM.DiceTheme.Dark": "Tema de Dados Escuros",
+  "SDM.DiceTheme.Light": "Tema de Dados Claros",
+  "SDM.DiceTheme.Luxury": "Tema de Dados de Luxo",
+  "SDM.DiceTheme.Neon": "Tema de Dados Neons",
+  "SDM.DiceTheme.Rainbowlands": "Tema de Dados Arcoirences",
+  "SDM.DiceTheme.Romantic": "Tema de Dados Românticos",
+  "SDM.DiceTheme.Warm": "Tema de Dados Quentes",
   "SDM.Die": "Dado",
   "SDM.DistributeXP": "Distribuir EXP",
   "SDM.DOCUMENT.Create": "Criar {type}",
@@ -594,6 +603,7 @@
   "SDM.Healing": "Cura",
   "SDM.HealingHouseRule": "Regra da Casa de Cura",
   "SDM.HeroDice": "dado heróico",
+  "SDM.HeroDiceDefaultStyle": "Estilo padrão dos Dados Heróicos",
   "SDM.HeroDiceHealingTip": "<b>clique-esquerdo</b>: role dados heróicos para se curar<br><b>clique-direito</b>: adiciona dados heróicos em uma parada bônus compartilhada",
   "SDM.HeroDiceMode": "Modo dos Dados Heróicos",
   "SDM.HeroDiceModeDecrease": "Diminuir (reduz resultado da rolagem)",
@@ -934,6 +944,7 @@
   "SDM.Oracle.skilled-d20.8.outcome": "Talvez, por um preço",
   "SDM.Oracle.skilled-d20.9.description": "Sim, mas com custo significativo",
   "SDM.Oracle.skilled-d20.9.outcome": "Talvez, por um preço",
+  "SDM.OracleDiceDefaultStyle": "Estilo padrão dos Dados de Oráculo",
   "SDM.OracleLabel.bell-2d10": "2d10 do Destino",
   "SDM.OracleLabel.bell-2d6": "2d6 Curva de Sino",
   "SDM.OracleLabel.d10-oracle": "Oráculo d10",
@@ -1049,6 +1060,8 @@
   "SDM.SettingsBaseSocialDefenseHint": "Defesa social padrão",
   "SDM.SettingsBaseTraitSlots": "Espaços de Traços Base",
   "SDM.SettingsBaseTraitSlotsHint": "Número base de espaços de inventário para traços",
+  "SDM.SettingsBloodDiceStyle": "Cor dos Dados de Sangue",
+  "SDM.SettingsBloodDiceStyleHint": "Configura o estilo de dados 3D usado para dados de sangue",
   "SDM.SettingsChromatype": "Cromatipo",
   "SDM.SettingsChromatypeHint": "Escolha seu cromatipo à luz da interface policromática! (altera a cor de destaque da interface)\nConfira no Dice So Nice: Configurações de Dados 3D para um tema \"SDM Chromatype Dice\"",
   "SDM.SettingsCurrencyImg": "Imagem padrão para itens de dinheiro",
@@ -1073,6 +1086,8 @@
   "SDM.SettingsGroupPlayersToFriendlyTokensHint": "Quando ativado, jogadores são agrupados junto com tokens amigáveis.",
   "SDM.SettingsHealingHouseRule": "Regra da Casa para Cura",
   "SDM.SettingsHealingHouseRuleHint": "Role dados heróicos duas vezes e mantenha o maior resultado",
+  "SDM.SettingsHeroDiceStyle": "Cor dos Dados Heróicos",
+  "SDM.SettingsHeroDiceStyleHint": "Configura o estilo de dados 3D usado para dados heróicos",
   "SDM.SettingsInitiativeFormula": "Rolagem de Iniciativa",
   "SDM.SettingsInitiativeFormulaHint": "Rolagem padrão de Iniciativa para personagens jogadores",
   "SDM.SettingsInvalidChange": "{settings} inválido(a), revertendo para padrão",
@@ -1082,6 +1097,8 @@
   "SDM.SettingsLuckySevenRuleHint": "O mediador fornece um benefício ou bônus quando um 7 natural é rolado. Mesmo que a rolagem seja uma falha.",
   "SDM.SettingsNPCInitiativeFormula": "Rolagem de Iniciativa para NPCs",
   "SDM.SettingsNPCInitiativeFormulaHint": "Rolagem padrão de Initiativa para NPCs",
+  "SDM.SettingsOracleDiceStyle": "Cor dos Dados de Oráculo",
+  "SDM.SettingsOracleDiceStyleHint": "Configura o estilo de dados 3D usado para dados de oráculo",
   "SDM.SettingsRerollInitiativeEveryRound": "Rerrolar Iniciativas dos Grupos a Cada Rodada",
   "SDM.SettingsRerollInitiativeEveryRoundHint": "Quando ativado, a iniciativa de grupo será rerrolada a cada nova rodada.",
   "SDM.SettingsReverseShiftKey": "Tecla Shift reversa",
@@ -1094,6 +1111,8 @@
   "SDM.SettingsShouldPlayLevelUpSoundFxHint": "Habilita a reprodução de um efeito sonoro quando personagens sobem de nível",
   "SDM.SettingsSkillModifierStep": "Modificador de Perícias",
   "SDM.SettingsSkillModifierStepHint": "Muda o incremento padrão de bonus para cada ranque de uma perícia",
+  "SDM.SettingsTouristDiceStyle": "Cor dos Dados Turísticos",
+  "SDM.SettingsTouristDiceStyleHint": "Configura o estilo de dados 3D usado para dados turísticos",
   "SDM.SettingsUseHardLimitRule": "Regra Opcional de Limite Máximo",
   "SDM.SettingsUseHardLimitRuleHint": "Ativa o limite máximo nos bônus aplicados a rolagens de d20",
   "SDM.SettingUpdated": "{key} atualizado para {value}.",
