feat: :sparkles: Added rolled dice to the dice oracles result chat card

--- a/lang/en.json
+++ b/lang/en.json
@@ -378,6 +378,7 @@
   "SDM.DepletedResources": "Last ammo, one remains",
   "SDM.DiceDiscarded": "discarded",
   "SDM.DiceOracles": "Dice Oracles",
+  "SDM.DiceOraclesQuestionPlaceholder": "Ask your question... (optional)",
   "SDM.DiceTheme.Chromatype": "Chromatype Dice theme",
   "SDM.DiceTheme.Cool": "Cool Dice theme",
   "SDM.DiceTheme.Dark": "Dark Dice theme",
@@ -1090,6 +1091,8 @@
   "SDM.SettingsHeroDiceStyleHint": "Configure 3d dice style used for hero dice",
   "SDM.SettingsInitiativeFormula": "Initiative Formula",
   "SDM.SettingsInitiativeFormulaHint": "Default initiative formula for characters",
+  "SDM.SettingsInitiativeTiebreak": "Use Group Initiative Tiebreaker",
+  "SDM.SettingsInitiativeTiebreakHint": "Add a decimal value to group initiative rolls.\nGroup initiatives will never result in the exact same value.",
   "SDM.SettingsInvalidChange": "Invalid {settings}, reverting to default value",
   "SDM.SettingsLevelUpSoundFx": "Level Up Sounds Effect",
   "SDM.SettingsLevelUpSoundFxHint": "Changes the sound effect played on character level up",
