--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -378,6 +378,7 @@
   "SDM.DepletedResources": "Última bala, resta uma",
   "SDM.DiceDiscarded": "descartado",
   "SDM.DiceOracles": "Oráculos dos Dados",
+  "SDM.DiceOraclesQuestionPlaceholder": "Faça sua pergunta... (opcional)",
   "SDM.DiceTheme.Chromatype": "Tema de Dados de Cromatipo",
   "SDM.DiceTheme.Cool": "Tema de Dados Frios",
   "SDM.DiceTheme.Dark": "Tema de Dados Escuros",
@@ -1090,6 +1091,8 @@
   "SDM.SettingsHeroDiceStyleHint": "Configura o estilo de dados 3D usado para dados heróicos",
   "SDM.SettingsInitiativeFormula": "Rolagem de Iniciativa",
   "SDM.SettingsInitiativeFormulaHint": "Rolagem padrão de Iniciativa para personagens jogadores",
+  "SDM.SettingsInitiativeTiebreak": "Usar Desempate na Iniciativa de Grupo",
+  "SDM.SettingsInitiativeTiebreakHint": "Adiciona um valor decimal às rolagens de iniciativa de grupo.\nIniciativas de grupo nunca resultarão exatamente no mesmo valor.",
   "SDM.SettingsInvalidChange": "{settings} inválido(a), revertendo para padrão",
   "SDM.SettingsLevelUpSoundFx": "Efeito sonoro ao subir de nível",
   "SDM.SettingsLevelUpSoundFxHint": "Muda o efeito sonoro reproduzido ao subir de nível",
