feat: :sparkles: Add option to drop npcs in the caravan sheet

--- a/lang/en.json
+++ b/lang/en.json
@@ -279,6 +279,7 @@
   "SDM.ButtonRoll": "Roll",
   "SDM.ButtonSave": "Save Changes",
   "SDM.ButtonYes": "Yes",
+  "SDM.CaravanCrewOpenNPCSheet": "Double click to open {name}'s character sheet",
   "SDM.CaravanItemSlots": "Caravan Items",
   "SDM.CashManagement": "Cash Management",
   "SDM.CashManagementAddMoney": "Give Money",
@@ -346,6 +347,7 @@
   "SDM.CreatePowerItem": "Create Power as",
   "SDM.CreateRandomNPC": "NPC Generator",
   "SDM.CreatureTable": "NPC Table",
+  "SDM.Crew": "crew member",
   "SDM.CriticalFailure": "Critical Failure",
   "SDM.CriticalSuccess": "Critical Success",
   "SDM.crystal-cannons": " Crystal Cannons",
