--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -279,6 +279,7 @@
   "SDM.ButtonRoll": "Rolar",
   "SDM.ButtonSave": "Salvar",
   "SDM.ButtonYes": "Sim",
+  "SDM.CaravanCrewOpenNPCSheet": "Dois cliques para abrir a ficha de {name}",
   "SDM.CaravanItemSlots": "Itens da Caravana",
   "SDM.CashManagement": "Gestão de Dinheiro",
   "SDM.CashManagementAddMoney": "Adicionar Dinheiro",
@@ -346,6 +347,7 @@
   "SDM.CreatePowerItem": "Criar Poder como",
   "SDM.CreateRandomNPC": "Gerador de NPC",
   "SDM.CreatureTable": "Tabela de NPCs",
+  "SDM.Crew": "membro da equipe",
   "SDM.CriticalFailure": "Falha Crítica",
   "SDM.CriticalSuccess": "Sucesso Crítico",
   "SDM.crystal-cannons": "Canhões de Cristal",
