feat: :sparkles: Add item features tab

--- a/lang/en.json
+++ b/lang/en.json
@@ -738,6 +738,7 @@
   "SDM.ItemArmor": "Armor",
   "SDM.ItemArmorType": "Type",
   "SDM.ItemCharges": "Charges",
+  "SDM.ItemReplenish": "Replenish",
   "SDM.ItemCost": "Unit Cost (€)",
   "SDM.ItemCurrentCharges": "Current Charges",
   "SDM.ItemGearType": "Item Type",
@@ -759,6 +760,7 @@
   "SDM.ItemStatusRunningLow": "Running Low",
   "SDM.ItemStatusRunOut": "Run Out",
   "SDM.ItemTabAlbum": "Album",
+  "SDM.ItemTabFeatures": "Features",
   "SDM.ItemTabAttributes": "Attributes",
   "SDM.ItemTabDescription": "Description",
   "SDM.ItemTabEffects": "Effects",
