--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -738,6 +738,7 @@
   "SDM.ItemArmor": "Armadura",
   "SDM.ItemArmorType": "Tipo",
   "SDM.ItemCharges": "Cargas",
+  "SDM.ItemReplenish": "Recarga",
   "SDM.ItemCost": "Custo Unitário (€)",
   "SDM.ItemCurrentCharges": "Cargas Atuais",
   "SDM.ItemGearType": "Tipo de Item",
@@ -759,6 +760,7 @@
   "SDM.ItemStatusRunningLow": "Acabando",
   "SDM.ItemStatusRunOut": "Esgotado",
   "SDM.ItemTabAlbum": "Álbum",
+  "SDM.ItemTabFeatures": "Características",
   "SDM.ItemTabAttributes": "Atributos",
   "SDM.ItemTabDescription": "Descrição",
   "SDM.ItemTabEffects": "Efeitos",
